@@ -1,3 +1,7 @@
+2009-07-21  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/cmap.rb: class-URL mapping.
+
 2009-07-15  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/controller.rb: controller action.
